# FTObjectLibrary

./: .codecov.yml  .gitignore  .typos.toml  AUTHORS.md  CMakeLists.txt  FTObjectLibraryTestSuite.mak  LICENSE.md  README.md  SECURITY.md  ftobjectlibrary-config.cmake.in  ftobjectlibraryConfig.cmake.in  index.html  modules.json  search.html
.github/workflows/: ci.yml  documentation.yml
Docs/: .gitignore  FTObjectLibrary.tex  FTObjectLibraryProject.md  News.md  UsersGuide.md
Docs/HTMLdocs/: index.html  search.html
Docs/HTMLdocs/interface/: cast.html  cast~2.html  cast~3.html  cast~4.html  cast~5.html  cast~6.html  cast~7.html  catch.html  ftassertequal.html  isequal.html  release.html  release~10.html  release~11.html  (+10 more)
Examples/: Calculator.f90  CalculatorExample.f90  Examples.mak  LinkedListExample.f90  Makefile  main.f90
Source/: CMakeLists.txt  FTObjectClass.f90.template  FTObjectLibrary.f90
Source/FTObjects/: FTDataClass.f90  FTDictionaryClass.f90  FTExceptionClass.f90  FTHashTableClass.f90  FTLinkedListClass.f90  FTMultiIndexTable.f90  FTObjectArrayClass.f90  FTObjectClass.f90  FTSparseMatrixClass.f90  FTStackClass.f90  FTStringSetClass.f90  FTValueClass.f90  FTValueDictionaryClass.f90  Hash.f90
Source/FTTesting/: Assert.f90  Comparisons.f90  TestSuiteManagerClass.f90
Source/Foundation/: Constants.f90  FTOLConstants.f90
TestSuiteBuild/: .gitignore  Makefile  TestSuite.mak  createcoverage
Testing/: TestMain.f90
Testing/Tests/: AssertionFailureTests.f90  ComparisonTests.f90  DataTests.f90  DictionaryTests.f90  ExceptionTests.f90  HashTableTests.f90  LinkedListTests.f90  MultiIndexTableTests.f90  MutableArrayTests.f90  OptionalDataTests.f90  SparseMatrixTests.f90  StacksTests.f90  StringSetTests.f90  ValueClassTests.f90  ValueDictionaryTests.f90
interface/: cast.html  cast~2.html  cast~3.html  cast~4.html  cast~5.html  cast~6.html  cast~7.html  catch.html  ftassertequal.html  isequal.html  release.html
lists/: files.html  modules.html  procedures.html  types.html
makeLibrary/: FTObjectLibrary.mak  Makefile
module/: comparisonsmodule.html  ftassertions.html  ftdataclass.html  ftdictionaryclass.html  ftexceptionclass.html  ftkeyobjectpairclass.html  ftlinkedlistclass.html  ftlinkedlistiteratorclass.html  ftlinkedlistrecordclass.html  ftmultiindextableclass.html  ftmultiindextabledata.html  ftmutableobjectarrayclass.html  ftobjectclass.html  ftobjectlibrary.html  ftolconstants.html  ftsparsematrixclass.html  ftsparsematrixdata.html  ftstackclass.html  ftstringsetclass.html  ftvalueclass.html  ftvaluedictionaryclass.html  hashmodule.html  sharedexceptionmanagermodule.html  testsuitemanagerclass.html
proc/: add.html  adddoubleprecisionvalueforkey.html  addintegervalueforkey.html  addlogicalvalueforkey.html  addobjectforkey.html  addobjectsfromlist.html  addobjecttoarray.html  addobjecttomultiindextableforkeys.html  addobjecttosparsematrixforkeys.html  addquadvalueforkey.html  addrealvalueforkey.html  addstring.html  addstringvalueforkey.html  allkeys.html  alllinkedlistobjects.html  allobjects.html  allocatedsize.html  arrayclassname.html  assertwithintolerancetwoquad.html  b3hs_hash_key_jenkins.html  castdictionarytovaluedictionary.html  castobjecttolinkedlist.html  castobjecttomatrixdata.html  castobjecttomultiindexmatrixdata.html  castobjecttovaluedictionary.html  casttodictionary.html  casttoexception.html  casttomutableobjectarray.html  casttovalue.html  chunksize.html  classname.html  containskey.html  containsstring.html  count.html  dataclassname.html  datafromobject.html  dataisoftype.html  datatype.html  destructdata.html  destructexception.html  (+193 more)
search/: search_database.json
sourcefile/: assert.f90.html  comparisons.f90.html  ftdataclass.f90.html  ftdictionaryclass.f90.html  ftexceptionclass.f90.html  ftlinkedlistclass.f90.html  ftmultiindextable.f90.html  ftobjectarrayclass.f90.html  ftobjectclass.f90.html  ftobjectlibrary.f90.html  ftolconstants.f90.html  ftsparsematrixclass.f90.html  ftstackclass.f90.html  ftstringsetclass.f90.html  ftvalueclass.f90.html  ftvaluedictionaryclass.f90.html  hash.f90.html  testsuitemanagerclass.f90.html
src/: Assert.f90  Comparisons.f90  FTDataClass.f90  FTDictionaryClass.f90  FTExceptionClass.f90  FTLinkedListClass.f90  FTMultiIndexTable.f90  FTOLConstants.f90  FTObjectArrayClass.f90  FTObjectClass.f90  FTObjectLibrary.f90  FTSparseMatrixClass.f90  FTStackClass.f90  FTStringSetClass.f90  FTValueClass.f90  FTValueDictionaryClass.f90  Hash.f90  TestSuiteManagerClass.f90
tipuesearch/: tipuesearch_content.js
type/: assertinfoarray1d.html  assertinfoarray2d.html  ftassertionsmanager.html  ftdata.html  ftdictionary.html  ftexception.html  ftkeyobjectpair.html  ftlinkedlist.html  ftlinkedlistiterator.html  ftlinkedlistrecord.html  ftmultiindextable.html  ftmutableobjectarray.html  ftobject.html  ftsparsematrix.html  ftstack.html  ftstringset.html  ftvalue.html  ftvaluedictionary.html  matrixdata.html  multiindexmatrixdata.html  testsuitemanager.html
(+336 files in other folders)
