set(CMAKE_Fortran_FLAGS "${FTOBJ_COMPILER_FLAGS} ${CMAKE_Fortran_FLAGS}")
file(GLOB FTOBJ_SRC_FOUNDATION     "${CMAKE_CURRENT_SOURCE_DIR}/Foundation/*.f90")
file(GLOB FTOBJ_SRC_OBJECTS     "${CMAKE_CURRENT_SOURCE_DIR}/FTObjects/*.f90")
file(GLOB FTOBJ_SRC_TESTING     "${CMAKE_CURRENT_SOURCE_DIR}/FTTesting/*.f90")
file(GLOB FTOBJ_SRC_MAIN     "${CMAKE_CURRENT_SOURCE_DIR}/FTObjectLibrary.f90")

set(FTOBJ_LIB      "ftobject")
set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
ADD_LIBRARY(${FTOBJ_LIB} STATIC 
            ${FTOBJ_SRC_FOUNDATION}
	    ${FTOBJ_SRC_OBJECTS}
	    ${FTOBJ_SRC_TESTING}
            ${FTOBJ_SRC_MAIN})
            

install(TARGETS ${FTOBJ_LIB} 
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib)

install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION .)
