#SET(CMAKE_Fortran_FLAGS "${FTOBJ_COMPILER_FLAGS} ${CMAKE_Fortran_FLAGS}")
#file(GLOB FTOBJ_SRC_FOUNDATION     "${CMAKE_CURRENT_SOURCE_DIR}/Foundation/*.f90")
#file(GLOB FTOBJ_SRC_OBJECTS     "${CMAKE_CURRENT_SOURCE_DIR}/FTObjects/*.f90")
#file(GLOB FTOBJ_SRC_TESTING     "${CMAKE_CURRENT_SOURCE_DIR}/FTTesting/*.f90")
#file(GLOB FTOBJ_SRC_MAIN     "${CMAKE_CURRENT_SOURCE_DIR}/FTObjectLibrary.f90")
FILE(GLOB_RECURSE FTOBJ_SRC ${CMAKE_CURRENT_SOURCE_DIR} "*.f90")

SET(FTOBJ_LIB "ftobject")
SET(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
ADD_LIBRARY(${FTOBJ_LIB} STATIC ${FTOBJ_SRC})
            
INSTALL(TARGETS ${FTOBJ_LIB} 
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION .)
